Stylesheet/emote/tag updates 2013-03-24

--- a/source-css/anotherponymotessub.css
+++ b/source-css/anotherponymotessub.css
@@ -188,3 +188,33 @@ Width: 263px;
 Height: 260px;
 background-image: url(%%rpschibi%%) !important
 }
+
+a[href="/mybonbon"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 500px;
+Height: 403px;
+background-image: url(%%mybonbon%%) !important
+}
+
+a[href="/lyra1"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 158px;
+background-image: url(%%lyra1%%) !important
+}
+
+a[href="/slightlyterrifying"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 160px;
+Height: 191px;
+background-image: url(%%slightlyterrifying%%) !important
+}
