--- a/source-css/arborus.css
+++ b/source-css/arborus.css
@@ -500,3 +500,27 @@ a[href|="/rdjam"] {
     width: 142px;
     height: 124px;
     background-image: url(%%20percentcooler%%) }
+
+a[href|="/twentyfiveminutesofthis"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 97px;
+    height: 140px;
+    background-image: url(%%uploads%%) }
+
+a[href|="/blueshaft"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 101px;
+    height: 140px;
+    background-image: url(%%blueshaft%%) }
+
+a[href|="/livingthedream"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 133px;
+    height: 140px;
+    background-image: url(%%lyrafingers%%) }
