--- a/source-css/mylittlelistentothis.css
+++ b/source-css/mylittlelistentothis.css
@@ -2239,14 +2239,14 @@ a.author[href$="/hiero_"] {
     vertical-align: bottom
     }
 a.author[href$="/hiero_"]:after {
-    content: "Aquaman";
+    content: "Nightwing";
     display: block;
     font-size: 12px !important;
     letter-spacing: normal;
     visibility: visible !important
     }
 a.author[href$="/hiero_"]:hover:after {
-    content: "I have a lot of bad ideas";
+    content: "I have a lot of incredible ideas";
     display: block;
     font-size: 12px !important;
     letter-spacing: normal;
