--- a/source-css/mylittlewarhammer.css
+++ b/source-css/mylittlewarhammer.css
@@ -1,7 +1,7 @@
 /* Emotes go here!*/
 
 a[href|="/heresy"]   {
-    background-image: url(%%heresy-100%%) !important;
+    background-image: url(%%heresy-fix%%) !important;
     clear: none;
     display: block;
     float: left;
