--- a/source-css/onetrueprincess.css
+++ b/source-css/onetrueprincess.css
@@ -461,3 +461,83 @@ Width: 100px;
 Height: 132px;
 background-image: url(%%sweetiewhatthe%%) !important
 }
+
+a[href="/dashfirenom"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 150px;
+background-image: url(%%dashfirenom%%) !important
+}
+
+a[href="/flutterbraid"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 194px;
+background-image: url(%%flutterbraid%%) !important
+}
+
+a[href="/lunawtfisthat"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 150px;
+background-image: url(%%lunawtfisthat%%) !important
+}
+
+a[href="/eriscute"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 93px;
+Height: 150px;
+background-image: url(%%discordcute%%) !important
+}
+
+a[href="/erisme"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 151px;
+background-image: url(%%erispoint%%) !important
+}
+
+a[href="/miniluna"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 113px;
+background-image: url(%%miniluna%%) !important
+}
+
+a[href="/flufflehop"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 146px;
+background-image: url(%%flufflehop%%) !important
+}
+
+a[href="/flufflefall"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 138px;
+background-image: url(%%flufflefall%%) !important
+}
