--- a/source-css/speedingturtle.css
+++ b/source-css/speedingturtle.css
@@ -75,7 +75,7 @@ background-position: -289px -141px
  *
  */
 
-a[href|='/turnope'], a[href|='/spitderp'], a[href|='/hound'], a[href|='/deslo'], a[href|='/flirtypie'], a[href|='/spitbunny'], a[href|='/deslosex'], a[href|='/orange'], a[href|='/fitfiddle'], a[href|='/sexychiv'], a[href|='/ndisaproval'], a[href|='/ndisaprooval'], a[href|='/kontan'], a[href|='/reggie'], a[href|='/idontgiveashit'], a[href|='/twisitting'], a[href|='/flysymphony'], a[href|='/fly'], a[href|='/rapebus'], a[href|='/excitedpie'], a[href|='/sleepyluna'], a[href|='/badatsleeping'], a[href|='/sirachisicle'], a[href|='/rdj'], a[href|='/rarityass']
+a[href|='/turnope'], a[href|='/spitderp'], a[href|='/hound'], a[href|='/deslo'], a[href|='/flirtypie'], a[href|='/spitbunny'], a[href|='/deslosex'], a[href|='/orange'], a[href|='/fitfiddle'], a[href|='/sexychiv'], a[href|='/ndisaproval'], a[href|='/ndisaprooval'], a[href|='/kontan'], a[href|='/reggie'], a[href|='/idontgiveashit'], a[href|='/flysymphony'], a[href|='/fly'], a[href|='/rapebus'], a[href|='/excitedpie'], a[href|='/sleepyluna'], a[href|='/badatsleeping'], a[href|='/sirachisicle'], a[href|='/rdj'], a[href|='/rarityass']
  {
     display: block;
     clear: none;
@@ -127,6 +127,18 @@ a[href|="/horriblemonsterface"] {
 a[href|="/horriblemonsterface"] {
     width: 90px;
     height: 90px;
+    background-position: -0px -0px
+    }
+
+a[href|="/desu"] {
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%desu%%)
+    }
+a[href|="/desu"] {
+    width: 200px;
+    height: 200px;
     background-position: -0px -0px
     }
 
