--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -367,29 +367,31 @@ a[href|="/plotseverywhere"]{ background-position: 0 -1937px; width: 180px; heigh
 a[href|="/psychoshy"]{ background-position: -250px 0; width: 98px; height: 150px;}
 a[href|="/psychoshy"]:hover{background-position: -250px -200px; width: 98px; height: 150px;}
 
-a[href|="/lpmintals"], a[href|="/redeye"], a[href|="/vrcrazy"], a[href|="/mglory"], a[href|="/hiredgun"], a[href|="/bjwindow"], a[href|="/calamityspooky"], a[href|="/murkyinsecure"], a[href|="/bjinabowl"], a[href|="/tapdancingbj"], a[href|="/bjbored"], a[href|="/lpgdi"], a[href|="/bjmanic"], a[href|="/twiseal"], a[href|="/murkyfaint"]
+a[href|="/lpmintals"], a[href|="/redeye"], a[href|="/vrcrazy"], a[href|="/mglory"], a[href|="/hiredgun"], a[href|="/bjwindow"], a[href|="/calamityspooky"], a[href|="/murkyinsecure"], a[href|="/bjinabowl"], a[href|="/tapdancingbj"], a[href|="/bjbored"], a[href|="/lpgdi"], a[href|="/bjmanic"], a[href|="/twiseal"], a[href|="/murkyfaint"], a[href|="/princessbj"], a[href|="/glimmerhug"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em5-v26%%);
+background-image: url(%%foe-em5-v30%%);
 }
 a[href|="/bjbored"]{background-position: 0 0; width: 70px; height: 70px; }
 a[href|="/bjinabowl"]{ background-position: 0 -120px; width: 73px; height: 70px; }
 a[href|="/bjmanic"]{background-position: 0 -240px; width: 70px; height: 72px; }
 a[href|="/bjwindow"]{ background-position: 0 -362px; width: 96px; height: 100px;}
 a[href|="/calamityspooky"]{ background-position: 0 -512px; width: 129px; height: 100px; }
-a[href|="/hiredgun"]{ background-position: 0 -662px; width: 117px; height: 150px; }
-a[href|="/lpgdi"]{ background-position: 0 -862px; width: 70px; height: 83px; }
-a[href|="/lpmintals"]{background-position: 0 -995px; width: 71px; height: 100px; } 
-a[href|="/mglory"]{ background-position: 0 -1145px; width: 154px; height: 150px; }
-a[href|="/murkyfaint"]{ background-position: 0 -1345px; width: 190px; height: 150px; }
-a[href|="/murkyinsecure"]{ background-position: 0 -1545px; width: 81px; height: 100px; }
-a[href|="/redeye"]{background-position: 0 -1695px; width: 64px; height: 100px; }
-a[href|="/tapdancingbj"]{ background-position: 0 -1845px; width: 127px; height: 150px; }
-a[href|="/twiseal"]{ background-position: -240px 0; width: 133px; height: 150px; }
-a[href|="/vrcrazy"]{ background-position: -240px -200px; width: 70px; height: 70px; } 
+a[href|="/glimmerhug"]{background-position: 0 -662px; width: 120px; height: 150px; }
+a[href|="/hiredgun"]{ background-position: 0 -862px; width: 117px; height: 150px; }
+a[href|="/lpgdi"]{ background-position: 0 -1062px; width: 70px; height: 83px; }
+a[href|="/lpmintals"]{background-position: 0 -1195px; width: 71px; height: 100px; } 
+a[href|="/mglory"]{ background-position: 0 -1345px; width: 154px; height: 150px; }
+a[href|="/murkyfaint"]{ background-position: 0 -1545px; width: 190px; height: 150px; }
+a[href|="/murkyinsecure"]{ background-position: 0 -1745px; width: 81px; height: 100px; }
+a[href|="/princessbj"]{ background-position: 0 -1895px; width: 139px; height: 150px; }
+a[href|="/redeye"]{ background-position: -240px 0; width: 64px; height: 100px; }
+a[href|="/tapdancingbj"]{ background-position: -240px -150px; width: 127px; height: 150px; }
+a[href|="/twiseal"]{ background-position: -240px -350px; width: 133px; height: 150px; }
+a[href|="/vrcrazy"]{ background-position: -240px -550px; width: 70px; height: 70px; } 
 
 
 a[href|="/advicebj"]
