--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -117,10 +117,10 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
 {
  display:inline-block;
  float:right;
- background:url(%%twilight-hat%%);
- width:65px;
- height:54px;
- margin-top:-29px;
+ background:url(%%galacon-hat%%);
+ width:60px;
+ height:60px;
+ margin-top:-35px;
  margin-left:4px;
  margin-bottom:-14px;
  margin-right:-40px;
