--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -1,4 +1,4 @@
-
+/* 
 _____________________________________________▄▄████████▄ 
 ___________________________________________▄█▓▓▓█▓▓▓▓▓▓██▄ 
 ___________________________________________█▓▓▓▓▓██▓▓▓▓▓▓▓█▄ 
@@ -68,6 +68,10 @@ _________________________________________█▓▓▓▓▓▓█▀▀▀▀▀
 ___________________________________________██▓▓▓▓███▄▄ 
 ______________________________________________▀▀▀▀▀
 
+...Really, Joker? You put an ASCII Pinkie in the stylesheet of a Vinyl sub? PINKIE PIE BEST PONE BIAAAAAAAAAAAATTTCCHHH!!!! [](/wmdis)[](/wmkarma)[](/wmpinkamina)[](/wmaj) WURDS R SO SXY!
+
+*/
+
 /*Temporary CSS to make the sidebar picture (oh god please don't fuck up everything) remove this shit after a week or so*/
 
 div.side {
@@ -133,6 +137,7 @@ body:first-of-type, body.res-nightmode:first-of-type,.side,.flairtoggle,.submit 
 .side .usertext[id$="7"] a[href="/bg-pony"] { background:url(%%bg1%%); width:761px; height:600px; background-position: -690px -604px   !important}
 .side .usertext[id$="8"] a[href="/bg-pony"] { background:url(%%bg1%%); width:1157px; height:691px; background-position: -781px -1206px  !important}
 .side .usertext[id$="9"] a[href="/bg-pony"]  { background:url(%%unce%%); width:240px; height:180px; background-position: -0px -0px  !important}
+.side .usertext[id$="10"] a[href="/bg-pony"] { background:url(%%bg3%%);  width:400px; height:530px; background-position: 0px 0px !important;}
 
 /*---------------------- Nightmode fixes for the background -------------------------------- */
 .content #siteTable div[onclick="click_thing(this)"] {background-color: transparent!important;}
@@ -523,14 +528,14 @@ body.res-nightmode:first-of-type .flair { background-color: transparent!importan
 
 /* vs_start */
 	
-a[href|='/shrug'],a[href|="/vsshrug"],a[href|='/tableflip'],a[href|='/vslaying'],a[href|='/laying'],a[href|='/vsplot'],a[href|='/vssalute'],a[href|='/vssquee'],a[href|='/vsohyou'],a[href|='/vsdeal'],a[href|='/vsderp'],a[href|='/vslying'],a[href|='/vshooves'],a[href|='/vslook'],a[href|='/vsomg'],a[href|='/vsfilly'],a[href|='/vsmog'],a[href|="/vsdrawponies"],a[href|="/vshnngg"],a[href|="/hnnng"],a[href|='/vswubs'],a[href|='/vssad'],a[href|='/vstear'],a[href|='/vshey'],a[href|='/vscurious'],a[href|='/vshappy'],a[href|='/vsbass'],a[href|='/vsoooo'],a[href|='/vsyds'],a[href|='/vsyoudontsay'],a[href|='/vscute'],a[href|='/vseyeroll'],a[href|='/vsmilkshake'],a[href|='/vsconcerned'],a[href|='/vshair'],a[href|='/vsmeh'],a[href|='/vswink'],a[href|='/vsjuice'],a[href|='/vssup'],a[href|='/vsmine'],a[href|='/vsnope'],a[href|='/vswtf'],a[href|='/vswhatthefuck'],a[href|='/vsboring'],a[href|='/vsheh'],a[href|='/vsyes'],a[href|='/vs00'],a[href|='/vs01'],a[href|='/vs02'],a[href|='/vs03'],a[href|='/vs04'],a[href|='/vs05'],a[href|='/vs06'],a[href|='/vs07'],a[href|='/vs08'],a[href|='/vs09'],a[href|='/vs0a'],a[href|='/vs10'],a[href|='/vs11'],a[href|='/vs12'],a[href|='/vs13'],a[href|='/vs14'],a[href|='/vs15'],a[href|='/vs16'],a[href|='/vs17'],a[href|='/vs18'],a[href|='/vs19'],a[href|='/vs1a'],a[href|='/vs1b'],a[href|='/vs20'],a[href|='/vs21'],a[href|='/vs22'],a[href|='/vs23'],a[href|='/vs24'],a[href|='/vs25'],a[href|='/vs26'],a[href|='/vs27'],a[href|='/vs28'],a[href|='/vs29'],a[href|='/vs2a']{
+a[href|='/shrug'],a[href|="/vsshrug"],a[href|='/tableflip'],a[href|='/vslaying'],a[href|='/laying'],a[href|='/vsplot'],a[href|='/vssalute'],a[href|='/vssquee'],a[href|='/vsohyou'],a[href|='/vsdeal'],a[href|='/vsderp'],a[href|='/vslying'],a[href|='/vshooves'],a[href|='/vslook'],a[href|='/vsomg'],a[href|='/vsfilly'],a[href|='/vsmog'],a[href|="/vsdrawponies"],a[href|="/vshnngg"],a[href|='/vswubs'],a[href|='/vssad'],a[href|='/vstear'],a[href|='/vshey'],a[href|='/vscurious'],a[href|='/vshappy'],a[href|='/vsbass'],a[href|='/vsoooo'],a[href|='/vsyds'],a[href|='/vsyoudontsay'],a[href|='/vscute'],a[href|='/vseyeroll'],a[href|='/vsmilkshake'],a[href|='/vsconcerned'],a[href|='/vshair'],a[href|='/vsmeh'],a[href|='/vswink'],a[href|='/vsjuice'],a[href|='/vssup'],a[href|='/vsmine'],a[href|='/vsnope'],a[href|='/vswtf'],a[href|='/vswhatthefuck'],a[href|='/vsboring'],a[href|='/vsheh'],a[href|='/vsyes'],a[href|='/vs00'],a[href|='/vs01'],a[href|='/vs02'],a[href|='/vs03'],a[href|='/vs04'],a[href|='/vs05'],a[href|='/vs06'],a[href|='/vs07'],a[href|='/vs08'],a[href|='/vs09'],a[href|='/vs0a'],a[href|='/vs10'],a[href|='/vs11'],a[href|='/vs12'],a[href|='/vs13'],a[href|='/vs14'],a[href|='/vs15'],a[href|='/vs16'],a[href|='/vs17'],a[href|='/vs18'],a[href|='/vs19'],a[href|='/vs1a'],a[href|='/vs1b'],a[href|='/vs20'],a[href|='/vs21'],a[href|='/vs22'],a[href|='/vs23'],a[href|='/vs24'],a[href|='/vs25'],a[href|='/vs26'],a[href|='/vs27'],a[href|='/vs28'],a[href|='/vs29'],a[href|='/vs2a']{
     display: block;
     clear: none;
     float: left;
     background-image: url(%%vssheet%%) !important
     }
 
-a[href|='/vspuppy'],a[href|='/vssuave'],a[href|='/vsexcited'],a[href|='/vsdance2'],a[href|='/vsgrump'],a[href|='/vstears'],a[href|='/vssinep'],a[href|='/kixandra'],a[href|='/vsholyshit'],a[href|='/vsfacehoof'],a[href|='/vssrs'],a[href|='/vssoawesome'],a[href|='/vssupersad'],a[href|='/vssmug'],a[href|='/vysmug'],a[href|='/vs0b'],a[href|='/vs2b'],a[href|='/vs0c'],a[href|='/vs1c'],a[href|='/vs2c'],a[href|='/vs0d'],a[href|='/vs1d'],a[href|='/vs2d'],a[href|='/vs0e'] {
+a[href|='/vspuppy'],a[href|='/vssuave'],a[href|='/vsexcited'],a[href|='/vsdance2'],a[href|='/vsgrump'],a[href|='/vstears'],a[href|='/vssinep'],a[href|='/kixandra'],a[href|='/vsholyshit'],a[href|='/vsfacehoof'],a[href|='/vssrs'],a[href|='/vssoawesome'],a[href|='/vssupersad'],a[href|='/vssmug'],a[href|='/vysmug'],a[href|='/vsdontask'],a[href|='/vs0b'],a[href|='/vs2b'],a[href|='/vs0c'],a[href|='/vs1c'],a[href|='/vs2c'],a[href|='/vs0d'],a[href|='/vs1d'],a[href|='/vs2d'],a[href|='/vs0e'] {
     display: block;
     clear: none;
     float: left;
@@ -556,7 +561,7 @@ a[href|='/vslook'],a[href|='/vs05'] {width:70px; height:70px; background-positio
 a[href|='/vsomg'],a[href|='/vs06'] {width:70px; height:70px; background-position: -74px -600px}
 a[href|='/vsfilly'],a[href|='/vs07'] {width:70px; height:70px; background-position: -146px -456px}
 a[href|='/vsmog'],a[href|='/vs08'] {width:70px; height:70px; background-position: -362px -528px}
-a[href|="/vsdrawponies"], a[href|="/vshnngg"], a[href|="/hnnng"],a[href|='/vs09'] {width:59px; height:70px;background-position: -450px -253px}
+a[href|="/vsdrawponies"], a[href|="/vshnnng"],a[href|='/vs09'] {width:59px; height:70px;background-position: -450px -253px}
 a[href|='/vswubs'],a[href|='/vs0a'] {width:70px; height:65px;background-position: -302px -324px}
 
 /* 1 Column */
@@ -592,6 +597,7 @@ a[href|='/vspuppy'] {background-image: url(%%vssheet2%%);width:148px; height:145
 a[href|='/vsexcited'] {background-image: url(%%vssheet2%%);width:132px; height:294px;background-position: 0px 0px}
 a[href|='/vsgrump'] {background-image: url(%%vssheet2%%);width:100px; height:104px;background-position: 0px -295px}
 a[href|='/vssinep'],a[href|='/kixandra'] {background-image: url(%%vssheet2%%);width:200px; height:107px;background-position: -100px -305px}
+a[href|='/vsdontask'] {background-image: url(%%vssheet2%%);width:123px; height:100px;background-position: 0px -412px}
 
 /* 0 Column */
 a[href|='/vssuave'],a[href|='/vs0b'] {background-image: url(%%vssheet2%%);width:70px; height:83px;background-position: -145px -145px}
@@ -651,6 +657,15 @@ a[href|='/overlyattachedvinyl'] strong,a[href|='/oav'] strong {
     margin-left: -140px !important
     }
 
+a[href|="/hnngg"] {
+display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%hnnng%%) !important;
+    height: 70px;
+    width: 70px;
+    background-position: 0px 0px;
+}
 
 /*
 |
