Stylesheet/emote/tag updates 2013-03-29

--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -643,6 +643,10 @@ a[href|="/bpgoddess"],
 a[href|="/bpscrunchie"],
 a[href|="/lyrawat"],
 a[href|="/popetwilight"],
+a[href|="/gonnagetstuffdonetoday"],
+a[href|="/calmyourtits"],
+a[href|="/fsbatmare"],
+a[href|="/gremlintwilicorn"],
 a[href|="/gabelincolnhats"],
 a[href|="/danvs"], 
 a[href|="/DAAAN"]
@@ -714,6 +718,22 @@ a[href|="/lyrawat"]{
 a[href|="/popetwilight"]{
     width: 117px;
     background-position: -123px -700px;
+}
+a[href|="/gonnagetstuffdonetoday"]{
+    width: 166px;
+    background-position: -240px -700px;
+}
+a[href|="/calmyourtits"]{
+    width: 256px;
+    background-position: -0px -840px;
+}
+a[href|="/fsbatmare"]{
+    width: 119px;
+    background-position: -0px -980px;
+}
+a[href|="/gremlintwilicorn"]{
+    width: 125px;
+    background-position: -119px -980px;
 }
 a[href|="/danvs"]{
     width: 130px;
@@ -871,3 +891,81 @@ a[href|="/weirdwingboner"]
     background-position: -148px -1540px;
 }
 /* end sheet 6 */
+
+
+/* sheet 7 */
+a[href|="/bunchadrunks"], 
+a[href|="/rarpokerhat"], 
+a[href|="/dangerzone"], 
+a[href|="/bpno"],
+a[href|="/cannihurr"],
+a[href|="/cannijerks"],
+a[href|="/dramaaa"],
+a[href|="/maredoboozicorn"], 
+a[href|="/canninow"], 
+a[href|="/racist"],
+a[href|="/mwno"]
+{
+    display: block;
+    clear: none;
+    float: left;
+    height: 140px;
+    background-image: url(%%sheet7%%)
+}
+a[href|="/bunchadrunks"]
+{
+    width: 238px;
+    background-position: -0px -0px;
+}
+a[href|="/rarpokerhat"]
+{
+    width: 144px;
+    background-position: -238px -0px;
+}
+a[href|="/dangerzone"]
+{
+    width: 205px;
+    background-position: -0px -140px;
+}
+a[href|="/bpno"]
+{
+    width: 168px;
+    background-position: -205px -140px;
+}
+a[href|="/cannihurr"]
+{
+    width: 132px;
+    background-position: -0px -280px;
+}
+a[href|="/cannijerks"]
+{
+    width: 132px;
+    background-position: -132px -280px;
+}
+a[href|="/dramaaa"]
+{
+    width: 112px;
+    background-position: -264px -280px;
+}
+a[href|="/maredoboozicorn"]
+{
+    width: 190px;
+    background-position: -0px -420px;
+}
+a[href|="/canninow"]
+{
+    width: 198px;
+    background-position: -190px -420px;
+}
+a[href|="/racist"]
+{
+    width: 197px;
+    background-position: -0px -560px;
+}
+a[href|="/mwno"]
+{
+    width: 110px;
+	height: 200px;
+    background-position: -0px -1400px;
+}
+/* end sheet 7 */
