--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -174,7 +174,7 @@ margin-right:0px;
 .tabmenu {   
     padding:0 0 0 0;  
     position:absolute;
-    top:95px; 
+    top:93px; 
     left: -15px;
  
 }  
@@ -799,10 +799,9 @@ text-decoration:underline;
     border: 1px solid #5f99cf;
     position: absolute;
 
-    top: 5px;
-    left: 30%;
-    z-index: 50;
-    margin: 15px 310px 0 0;
+    top: 15px;
+    left: 35%;
+    z-index:20px 310px 0 0;
     padding: 8px 45px 8px 8px;
     list-style: none;
     display: block;
