--- a/source-css/onetrueprincess.css
+++ b/source-css/onetrueprincess.css
@@ -541,3 +541,23 @@ Width: 150px;
 Height: 138px;
 background-image: url(%%flufflefall%%) !important
 }
+
+a[href="/raritywhythankyou"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 236px;
+background-image: url(%%raritywhythankyou%%) !important
+}
+
+a[href="/rarityworried"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 150px;
+background-image: url(%%rarityworried%%) !important
+}
