--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -147,7 +147,7 @@ clear: none;
 float: left;
 width: 396px;
 height: 320px;
-background-image: url(%%sJkxTU7%%) !important
+background-image: url(%%sJkxTU7%%)
 }
 
 a[href|="/btl00"], a[href|="/btl10"], a[href|="/btl01"], a[href|="/btl11"], a[href|="/btl02"], a[href|="/btl12"], a[href|="/btl03"], a[href|="/btl13"], a[href|="/halp"], a[href|="/onekeg"], a[href|="/scootafresh"], a[href|="/spikedapper"], a[href|="/beepbeep"], a[href|="/vinyldance"], a[href|="/octysmile"], a[href|="/octygrin"] {
@@ -156,7 +156,7 @@ clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%btlemotetable1%%) !important
+background-image: url(%%btlemotetable1%%)
 }
 
 a[href|="/btl04"], a[href|="/octav3drag"]{
@@ -165,7 +165,7 @@ clear: none;
 float: left;
 width: 140px;
 height: 70px;
-background-image: url(%%btlemotetable1%%) !important
+background-image: url(%%btlemotetable1%%)
 }
 
 a[href|="/blt00"], a[href|="/blt10"], a[href|="/blt01"], a[href|="/blt11"], a[href|="/ppwhathorrorsarewe"], a[href|="/ppmoonwalk"], a[href|="/pprumgone"], a[href|="/rawrity"] {
@@ -174,7 +174,7 @@ clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%btlemotetable2%%) !important
+background-image: url(%%btlemotetable2%%)
 }
 
 a[href|="/blt20"], a[href|="/blt02"], a[href|="/blt22"], a[href|="/blt04"], a[href|="/blt24"], a[href|="/ppbloat"], a[href|="/ppfingers"], a[href|="/vodka"], a[href|="/wodka"], a[href|="/WODKA"], a[href|="/VODKA"], a[href|="/berryapproved"], a[href|="/bpapproves"], a[href|="/rdchairfort"] {
@@ -183,7 +183,7 @@ clear: none;
 float: left;
 width: 140px;
 height: 140px;
-background-image: url(%%btlemotetable2%%) !important
+background-image: url(%%btlemotetable2%%)
 }
 
 a[href|="/bptuba"], a[href|="/crystalmuffins"], a[href|="/miggyb"], a[href|="/omnomtom"], a[href|="/jeb"] {
@@ -192,7 +192,7 @@ clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%btlemotetable3%%) !important
+background-image: url(%%btlemotetable3%%)
 }
 
 a[href|="/jebkerman"], a[href|="/daftworth"], a[href|="/derpshake"] {
@@ -201,7 +201,7 @@ clear: none;
 float: left;
 width: 140px;
 height: 140px;
-background-image: url(%%btlemotetable3%%) !important
+background-image: url(%%btlemotetable3%%)
 }
 
 a[href|="/wubjection"] {
@@ -210,7 +210,7 @@ clear: none;
 float: left;
 width: 140px;
 height: 70px;
-background-image: url(%%btlemotetable3%%) !important
+background-image: url(%%btlemotetable3%%)
 }
 
 a[href|="/crystaldiva"] {
@@ -219,7 +219,7 @@ clear: none;
 float: left;
 width: 210px;
 height: 140px;
-background-image: url(%%btlemotetable3%%) !important
+background-image: url(%%btlemotetable3%%)
 }
 
 a[href|="/berryshake"], a[href|="/bpfight"], a[href|="/bpiv"], a[href|="/astronomicalwanker"], a[href|="/tomwithit"], a[href|="/ranboshad"], a[href|="/sweetiewubs"], a[href|="/greatscott"], a[href|="/longlines"], a[href|="/fry"] {
@@ -228,7 +228,7 @@ clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%btlemotetable4%%) !important
+background-image: url(%%btlemotetable4%%)
 }
 
 a[href|="/racistbarn"], a[href|="/lyrahalp"] {
@@ -237,7 +237,7 @@ clear: none;
 float: left;
 width: 140px;
 height: 140px;
-background-image: url(%%btlemotetable4%%) !important
+background-image: url(%%btlemotetable4%%)
 }
 
 a[href|="/ihavenomouthandimustscream"], a[href|="/sovietsalute"], a[href|="/nomeansno"]{
@@ -246,7 +246,7 @@ clear: none;
 float: left;
 width: 210px;
 height: 140px;
-background-image: url(%%btlemotetable4%%) !important
+background-image: url(%%btlemotetable4%%)
 }
 
 a[href|="/twijusthadsex"], a[href|="/shiteatinggrin"], a[href|="/egghead"], a[href|="/sehro"], a[href|="/kazoo"], a[href|="/cadanceheart"], a[href|="/berrytuber"], a[href|="/amgic"] {
@@ -255,7 +255,7 @@ clear: none;
 float: left;
 width: 70px;
 height: 70px;
-background-image: url(%%btlemotetable5%%) !important
+background-image: url(%%btlemotetable5%%)
 }
 
 a[href|="/raincloud"] {
@@ -264,7 +264,7 @@ clear: none;
 float: left;
 width: 140px;
 height: 70px;
-background-image: url(%%btlemotetable5%%) !important
+background-image: url(%%btlemotetable5%%)
 }
 
 a[href|="/trixdrunk"], a[href|="/itbegins"], a[href|="/thedrinkening"], a[href|="/heavybedroomeyes"] {
@@ -273,7 +273,7 @@ clear: none;
 float: left;
 width: 140px;
 height: 140px;
-background-image: url(%%btlemotetable5%%) !important
+background-image: url(%%btlemotetable5%%)
 }
 
 a[href|="/disalot"], a[href|="/murcasalute"], a[href|="/coloncannon"], a[href|="/alotofdiscord"]{
@@ -282,7 +282,7 @@ clear: none;
 float: left;
 width: 210px;
 height: 140px;
-background-image: url(%%btlemotetable5%%) !important
+background-image: url(%%btlemotetable5%%)
 }
 
 /*********Animotes begin here*******/
@@ -293,7 +293,7 @@ clear: none;
 float: left;
 width: 40px;
 height: 70px;
-background-image: url(%%octydance%%) !important
+background-image: url(%%octydance%%)
 }
 
 a[href|="/avinyldance"]{
@@ -302,7 +302,7 @@ clear: none;
 float: left;
 width: 57px;
 height: 70px;
-background-image: url(%%avinyldance%%) !important
+background-image: url(%%avinyldance%%)
 }
 
 a[href|="/tav3drag"]{
@@ -311,7 +311,7 @@ clear: none;
 float: left;
 width: 192px;
 height: 70px;
-background-image: url(%%tav3drag%%) !important
+background-image: url(%%tav3drag%%)
 }
 
 a[href|="/octav3dance"]{
@@ -320,7 +320,7 @@ clear: none;
 float: left;
 width: 137px;
 height: 70px;
-background-image: url(%%octav3dance%%) !important
+background-image: url(%%octav3dance%%)
 }
 
 a[href|="/poutypie"]{
@@ -329,7 +329,7 @@ clear: none;
 float: left;
 width: 143px;
 height: 70px;
-background-image: url(%%poutypie%%) !important
+background-image: url(%%poutypie%%)
 }
 
 a[href|="/vsheadbang"]{
@@ -338,7 +338,7 @@ clear: none;
 float: left;
 width: 92px;
 height: 70px;
-background-image: url(%%vsheadbang%%) !important
+background-image: url(%%vsheadbang%%)
 }
 
 a[href|="/sbpout"]{
@@ -347,7 +347,7 @@ clear: none;
 float: left;
 width: 108px;
 height: 140px;
-background-image: url(%%sbpout%%) !important
+background-image: url(%%sbpout%%)
 }
 
 a[href|="/scootabop"]{
@@ -356,7 +356,7 @@ clear: none;
 float: left;
 width: 110px;
 height: 140px;
-background-image: url(%%scootabop%%) !important
+background-image: url(%%scootabop%%)
 }
 
 a[href|="/scootafly"]{
@@ -365,7 +365,7 @@ clear: none;
 float: left;
 width: 161px;
 height: 140px;
-background-image: url(%%scootafly%%) !important
+background-image: url(%%scootafly%%)
 }
 
 a[href|="/scootafreakout"]{
@@ -374,7 +374,7 @@ clear: none;
 float: left;
 width: 139px;
 height: 140px;
-background-image: url(%%scootafreakout%%) !important
+background-image: url(%%scootafreakout%%)
 }
 
 a[href|="/scootalove"]{
@@ -383,7 +383,7 @@ clear: none;
 float: left;
 width: 97px;
 height: 140px;
-background-image: url(%%scootalove%%) !important
+background-image: url(%%scootalove%%)
 }
 
 a[href|="/scootatwitch"], a[href|="/scootahungover"], a[href|="/cades"]{
@@ -392,7 +392,7 @@ clear: none;
 float: left;
 width: 140px;
 height: 144px;
-background-image: url(%%scootatwitch-emote%%) !important
+background-image: url(%%scootatwitch-emote%%)
 }
 
 a[href|="/cmcshake"]{
@@ -401,7 +401,7 @@ clear: none;
 float: left;
 width: 140px;
 height: 87px;
-background-image: url(%%cmcshake%%) !important
+background-image: url(%%cmcshake%%)
 }
 
 a[href|="/bpdrink"]{
@@ -410,7 +410,7 @@ clear: none;
 float: left;
 width: 188px;
 height: 140px;
-background-image: url(%%bpdrink%%) !important
+background-image: url(%%bpdrink%%)
 }
 
 a[href|="/thesafewordiskumquat"], a[href|="/pinkieception"]{
@@ -419,7 +419,7 @@ clear: none;
 float: left;
 width: 249px;
 height: 140px;
-background-image: url(%%thesafewordiskumquat%%) !important
+background-image: url(%%thesafewordiskumquat%%)
 }
 
 a[href|="/abchaos"], a[href|="/theendoftheworldasweknowit"]{
@@ -428,7 +428,7 @@ clear: none;
 float: left;
 width: 180px;
 height: 140px;
-background-image: url(%%abchaos%%) !important
+background-image: url(%%abchaos%%)
 }
 
 a[href|="/hugyouandkissyouandloveyouforever"], a[href|="/ppelmyra"], a[href|="/ppsqueeze"]{
@@ -437,7 +437,7 @@ clear: none;
 float: left;
 width: 133px;
 height: 140px;
-background-image: url(%%ppelmyra%%) !important
+background-image: url(%%ppelmyra%%)
 }
 
 a[href|="/deskfuck"]{
@@ -446,7 +446,7 @@ clear: none;
 float: left;
 width: 192px;
 height: 140px;
-background-image: url(%%deskfuck%%) !important
+background-image: url(%%deskfuck%%)
 }
 
 a[href|="/abeepbeep"]{
@@ -455,7 +455,7 @@ clear: none;
 float: left;
 width: 71px;
 height: 70px;
-background-image: url(%%abeepbeep%%) !important
+background-image: url(%%abeepbeep%%)
 }
 
 a[href|="/twihop"]{
@@ -464,7 +464,7 @@ clear: none;
 float: left;
 width: 232px;
 height: 140px;
-background-image: url(%%twihop%%) !important
+background-image: url(%%twihop%%)
 }
 
 a[href|="/ilovebooze"], a[href|="/rdjack"]{
@@ -473,7 +473,7 @@ clear: none;
 float: left;
 width: 140px;
 height: 140px;
-background-image: url(%%rdjack%%) !important
+background-image: url(%%rdjack%%)
 }
 
 a[href|="/teamwork"], a[href|="/bluexmiggyotp"]{
@@ -482,7 +482,7 @@ clear: none;
 float: left;
 width: 196px;
 height: 110px;
-background-image: url(%%teamwork%%) !important
+background-image: url(%%teamwork%%)
 }
 
 a[href|="/tearypie"]{
@@ -491,7 +491,7 @@ clear: none;
 float: left;
 width: 249px;
 height: 140px;
-background-image: url(%%tearypie%%) !important
+background-image: url(%%tearypie%%)
 }
 
 a[href|="/pixelpunch"]{
@@ -500,7 +500,7 @@ clear: none;
 float: left;
 width: 118px;
 height: 86px;
-background-image: url(%%pixpunch%%) !important
+background-image: url(%%pixpunch%%)
 }
 
 a[href|="/ppmoustache"]{
@@ -509,7 +509,7 @@ clear: none;
 float: left;
 width: 118px;
 height: 140px;
-background-image: url(%%ppmoustache%%) !important
+background-image: url(%%ppmoustache%%)
 }
 
 a[href|="/lunawatchesyousleep"]{
@@ -518,7 +518,7 @@ clear: none;
 float: left;
 width: 176px;
 height: 140px;
-background-image: url(%%bestluna%%) !important
+background-image: url(%%bestluna%%)
 }
 
 a[href|="/rdtank"]{
@@ -527,7 +527,7 @@ clear: none;
 float: left;
 width: 180px;
 height: 100px;
-background-image: url(%%rdtank%%) !important
+background-image: url(%%rdtank%%)
 }
 
 a[href|="/scootanuzzles"]{
@@ -536,7 +536,7 @@ clear: none;
 float: left;
 width: 197px;
 height: 120px;
-background-image: url(%%dashscoots%%) !important
+background-image: url(%%dashscoots%%)
 }
 
 a[href|="/swagisthisidonteven"]{
@@ -545,7 +545,7 @@ clear: none;
 float: left;
 width: 134px;
 height: 140px;
-background-image: url(%%swagisthisidonteven%%) !important
+background-image: url(%%swagisthisidonteven%%)
 }
 
 a[href|="/abbeard"]{
@@ -554,7 +554,7 @@ clear: none;
 float: left;
 width: 150px;
 height: 140px;
-background-image: url(%%abbeard%%) !important
+background-image: url(%%abbeard%%)
 }
 
 a[href|="/abdonotwant"]{
@@ -563,7 +563,7 @@ clear: none;
 float: left;
 width: 179px;
 height: 140px;
-background-image: url(%%abdonotwant%%) !important
+background-image: url(%%abdonotwant%%)
 }
 
 a[href|="/spikesad"]{
@@ -572,7 +572,7 @@ clear: none;
 float: left;
 width: 128px;
 height: 140px;
-background-image: url(%%spikesad%%) !important
+background-image: url(%%spikesad%%)
 }
 
 a[href|="/tldr"], a[href|="/gummytreadmill"]{
@@ -581,7 +581,7 @@ clear: none;
 float: left;
 width: 216px;
 height: 140px;
-background-image: url(%%gummytreadmill%%) !important
+background-image: url(%%gummytreadmill%%)
 }
 
 a[href|="/trixchargin"]{
@@ -590,7 +590,7 @@ clear: none;
 float: left;
 width: 140px;
 height: 140px;
-background-image: url(%%trixchargin%%) !important
+background-image: url(%%trixchargin%%)
 }
 a[href|="/princessgummy"], a[href|="/imustgo"]{
 display:block;
@@ -598,7 +598,7 @@ clear: none;
 float: left;
 width: 187px;
 height: 140px;
-background-image: url(%%princessgummy%%) !important
+background-image: url(%%princessgummy%%)
 }
 
 /* Added by Cades because lol */
@@ -609,7 +609,7 @@ clear: none;
 float: left;
 width: 150px;
 height: 113px;
-background-image: url(%%itsafake%%) !important
+background-image: url(%%itsafake%%)
 }
 a[href|="/itsreal"], a[href|="/dontyouunderstand"], a[href|="/itsareal"]{
 display:block;
@@ -617,7 +617,7 @@ clear: none;
 float: left;
 width: 150px;
 height: 125px;
-background-image: url(%%itsreal%%) !important
+background-image: url(%%itsreal%%)
 }
 a[href|="/calmdowntwilight"]{
 display:block;
@@ -625,7 +625,7 @@ clear: none;
 float: left;
 width: 150px;
 height: 128px;
-background-image: url(%%calmdowntwilight%%) !important
+background-image: url(%%calmdowntwilight%%)
 }
 a[href|="/bpfreakout"]{
 display:block;
@@ -633,7 +633,7 @@ clear: none;
 float: left;
 width: 150px;
 height: 133px;
-background-image: url(%%bpfreakout%%) !important
+background-image: url(%%bpfreakout%%)
 }
 a[href|="/bpdrinkout"]{
 display:block;
@@ -641,7 +641,7 @@ clear: none;
 float: left;
 width: 150px;
 height: 132px;
-background-image: url(%%bpdrinkout%%) !important
+background-image: url(%%bpdrinkout%%)
 }
 a[href|="/ponykoreaisbestkorea"]{
 display:block;
@@ -649,7 +649,7 @@ clear: none;
 float: left;
 width: 300px;
 height: 221px;
-background-image: url(%%ponykoreaisbestkorea%%) !important
+background-image: url(%%ponykoreaisbestkorea%%)
 }
 a[href|="/pfudon"], a[href|="/pfudor"], a[href|="/pinkfluffyunicornsdancingonrainbows"], a[href|="/pinkfluffyunicorndancingonrainbows"]{
 display:block;
@@ -657,7 +657,7 @@ clear: none;
 float: left;
 width: 150px;
 height: 110px;
-background-image: url(%%pinkfluffy%%) !important
+background-image: url(%%pinkfluffy%%)
 }
 
 /* End Cades' Edits */
@@ -749,11 +749,11 @@ background-position: -0px -700px
         display: none;
         }  
 .subscribers .number::after {
-        content: " Seaponies";
+        content: " Drunken reprobates";
         }
     .users-online .word {
         display: none;
         }  
     .users-online .number::after {
-        content: " Seaponies online now";
+        content: " drinking now";
         }
