--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -329,3 +329,16 @@ a[href|="/snowdrop2"] { background-position: -0px -875px; width: 150px; height: 
 a[href|="/snowdrop"] { background-position: -0px -996px; width: 150px; height: 115px; }
 a[href|="/primdrop"] { background-position: -0px -1111px; width: 150px; height: 114px; }
 a[href|="/snowdropfilly"] { background-position: -141px -0px; width: 95px; height: 100px; }
+
+a[href|="/chibichrysalis"], a[href|="/scrambledeggs"], a[href|="/rarinsane"], a[href|="/chrysisnuggles"], a[href|="/mangodesu"] {
+     display: block;
+     clear: none;
+     float: left;
+     background-image: url(%%scrambledeggs%%) !important
+     }
+
+a[href|="/chibichrysalis"] { background-position: -0px -0px; width: 250px; height: 232px; }
+a[href|="/scrambledeggs"] { background-position: -0px -232px; width: 300px; height: 225px; }
+a[href|="/rarinsane"] { background-position: -0px -457px; width: 150px; height: 179px; }
+a[href|="/chrysisnuggles"] { background-position: -150px -457px; width: 150px; height: 142px; }
+a[href|="/mangodesu"] { background-position: -150px -599px; width: 150px; height: 138px; }
